Changing CopyToOutputDirectory from Always to PreserveNewest and improving the CreateNativeTxtFiles.ps1 script

--- a/src/BCrypt/BCrypt.csproj
+++ b/src/BCrypt/BCrypt.csproj
@@ -79,7 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="BCrypt.exports.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
