--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="User32.exports.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
