--- a/src/ImageHlp/ImageHlp.csproj
+++ b/src/ImageHlp/ImageHlp.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ImageHlp.exports.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
