--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Kernel32.exports.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="..\Kernel32.Shared\Kernel32.Shared.projitems" Label="Shared" />
