--- a/templates/LIBNAME.Desktop/LIBNAME.Desktop.csproj
+++ b/templates/LIBNAME.Desktop/LIBNAME.Desktop.csproj
@@ -37,6 +37,11 @@
     <Compile Include="LIBNAME.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+    <ItemGroup>
+    <Content Include="LIBNAME.exports.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="..\LIBNAME.Shared\LIBNAME.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))\EnlistmentInfo.targets" Condition=" '$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))' != '' " />
