--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -35,6 +35,9 @@
     <Compile Include="Kernel32+CreationDisposition.cs" />
     <Compile Include="Kernel32+FileAccess.cs" />
     <Compile Include="Kernel32+FileShare.cs" />
+    <Compile Include="Kernel32+NamedPipeInfoFlags.cs" />
+    <Compile Include="Kernel32+PipeMode.cs" />
+    <Compile Include="Kernel32+PipeAccessMode.cs" />
     <Compile Include="Kernel32+ProcessAccess.cs" />
     <Compile Include="Kernel32+PROCESSENTRY32.cs" />
     <Compile Include="Kernel32+PROCESS_INFORMATION.cs" />
@@ -47,6 +50,7 @@
     <Compile Include="Kernel32+STARTUPINFO.cs" />
     <Compile Include="Kernel32.cs" />
     <Compile Include="Kernel32.Helpers.cs" />
+    <Compile Include="Kernel32+NullablePipeMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
