--- a/src/Psapi.Tests/Psapi.Tests.csproj
+++ b/src/Psapi.Tests/Psapi.Tests.csproj
@@ -12,7 +12,8 @@
     <ProjectGuid>{2C8088B3-82BD-4784-B917-435838A2B1D5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <AssemblyName>PInvoke.Psapi.Tests</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
@@ -34,13 +35,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Psapi.Desktop\Psapi.Desktop.csproj">
-      <Project>{6AB26806-6A22-456D-AD87-CD8B3FAFA216}</Project>
-      <Name>Psapi.Desktop</Name>
-    </ProjectReference>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+    <ProjectReference Include="..\Psapi\Psapi.csproj">
+      <Project>{6ab26806-6a22-456d-ad87-cd8b3fafa216}</Project>
+      <Name>Psapi</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))\EnlistmentInfo.targets" Condition=" '$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))' != '' " />
