--- a/src/Kernel32.Tests/Kernel32.Tests.csproj
+++ b/src/Kernel32.Tests/Kernel32.Tests.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Kernel32.cs" />
+    <Compile Include="IgnoreOnOsVersionUnderFactAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
