--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -23,6 +23,11 @@
   <ItemGroup>
     <Compile Include="User32+FlashWindowFlags.cs" />
     <Compile Include="User32+FLASHWINFO.cs" />
+    <Compile Include="User32+MenuItemFlags.cs" />
+    <Compile Include="User32+MENUITEMINFO.cs" />
+    <Compile Include="User32+MenuItemState.cs" />
+    <Compile Include="User32+MenuItemType.cs" />
+    <Compile Include="User32+MenuMembersMask.cs" />
     <Compile Include="User32+SafeHookHandle.cs" />
     <Compile Include="User32+GetAncestorFlags.cs" />
     <Compile Include="User32+SetWindowLongFlags.cs" />
