--- a/src/BCrypt/BCrypt.csproj
+++ b/src/BCrypt/BCrypt.csproj
@@ -60,6 +60,8 @@
     <Compile Include="BCrypt+SymmetricKeyBlobTypes.cs" />
     <Compile Include="BCrypt.cs" />
     <Compile Include="BCrypt.Helpers.cs" />
+    <Compile Include="BCryptMockable.cs" />
+    <Compile Include="IBCryptMockable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
