--- a/src/Hid.Desktop/Hid.Desktop.csproj
+++ b/src/Hid.Desktop/Hid.Desktop.csproj
@@ -39,6 +39,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hid.cs" />
+    <Compile Include="HidMockable.cs" />
+    <Compile Include="IHidMockable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
