--- a/src/ImageHlp/ImageHlp.csproj
+++ b/src/ImageHlp/ImageHlp.csproj
@@ -38,8 +38,10 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IImageHlpMockable.cs" />
     <Compile Include="ImageHlp.cs" />
     <Compile Include="ImageHlp.Helpers.cs" />
+    <Compile Include="ImageHlpMockable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
