--- a/src/NCrypt/NCrypt.csproj
+++ b/src/NCrypt/NCrypt.csproj
@@ -23,6 +23,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="INCryptMockable.cs" />
     <Compile Include="NCrypt+LegacyKeySpec.cs" />
     <Compile Include="NCrypt+KeyStorageProviders.cs" />
     <Compile Include="NCrypt+KeyStorageImplementationType.cs" />
@@ -37,6 +38,7 @@
     <Compile Include="NCrypt+SECURITY_STATUS.cs" />
     <Compile Include="NCrypt.cs" />
     <Compile Include="NCrypt.Helpers.cs" />
+    <Compile Include="NCryptMockable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
