--- a/src/Hid.Desktop/Hid.Desktop.csproj
+++ b/src/Hid.Desktop/Hid.Desktop.csproj
@@ -40,7 +40,7 @@
   <ItemGroup>
     <Compile Include="Hid.cs" />
     <Compile Include="HidMockable.cs" />
-    <Compile Include="IHidMockable.cs" />
+    <Compile Include="IHid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
