--- a/src/Hid/Hid.csproj
+++ b/src/Hid/Hid.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="HidMockable.cs" />
-    <Compile Include="IHidMockable.cs" />
+    <Compile Include="IHid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
