--- a/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
+++ b/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
@@ -62,7 +62,7 @@
     <Compile Include="AdvApi32+ServiceDelayedAutoStartInfo.cs" />
     <Compile Include="AdvApi32+ServiceControlActionType.cs" />
     <Compile Include="AdvApi32Mockable.cs" />
-    <Compile Include="IAdvApi32Mockable.cs" />
+    <Compile Include="IAdvApi32.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdvApi32+ServiceControlAction.cs" />
     <Compile Include="AdvApi32+ServiceFailureActions.cs" />
