--- a/src/Kernel32/Kernel32.csproj
+++ b/src/Kernel32/Kernel32.csproj
@@ -23,7 +23,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="IKernel32Mockable.cs" />
+    <Compile Include="IKernel32.cs" />
     <Compile Include="Kernel32Mockable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
