--- a/src/SetupApi.Desktop/SetupApi.Desktop.csproj
+++ b/src/SetupApi.Desktop/SetupApi.Desktop.csproj
@@ -38,7 +38,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ISetupApiMockable.cs" />
+    <Compile Include="ISetupApi.cs" />
     <Compile Include="SetupApi+DeviceInfoData.cs" />
     <Compile Include="SetupApi+DeviceInterfaceData.cs" />
     <Compile Include="SetupApi+DeviceInterfaceDataFlags.cs" />
