--- a/src/EnlistmentInfo.targets
+++ b/src/EnlistmentInfo.targets
@@ -7,6 +7,7 @@
   <PropertyGroup>
     <DocumentationFile Condition=" !$(IsTestProject) ">$(OutputPath)$(AssemblyName).xml</DocumentationFile>
     <DefineConstants Condition=" '$(TargetFrameworkProfile)' == '' ">$(DefineConstants);DESKTOP</DefineConstants>
+    <DefineConstants Condition=" '$(TargetFrameworkProfile)' != '' ">$(DefineConstants);APISets</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
