Add BCrypt asymmetric key blob types
Fix #97

--- a/src/BCrypt/BCrypt.csproj
+++ b/src/BCrypt/BCrypt.csproj
@@ -48,12 +48,20 @@
     <Compile Include="BCrypt+BCryptSignHashFlags.cs" />
     <Compile Include="BCrypt+BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO.cs" />
     <Compile Include="BCrypt+BCRYPT_AUTH_TAG_LENGTHS_STRUCT.cs" />
+    <Compile Include="BCrypt+BCRYPT_KEY_BLOB.cs" />
+    <Compile Include="BCrypt+BCRYPT_DSA_KEY_BLOB_V2.cs" />
+    <Compile Include="BCrypt+BCRYPT_DSA_KEY_BLOB.cs" />
     <Compile Include="BCrypt+BCRYPT_KEY_DATA_BLOB_HEADER.cs" />
     <Compile Include="BCrypt+BCRYPT_KEY_LENGTHS_STRUCT.cs" />
+    <Compile Include="BCrypt+BCRYPT_ECCKEY_BLOB.cs" />
+    <Compile Include="BCrypt+BCRYPT_RSAKEY_BLOB.cs" />
+    <Compile Include="BCrypt+BCRYPT_DH_KEY_BLOB.cs" />
     <Compile Include="BCrypt+BufferType.cs" />
     <Compile Include="BCrypt+ChainingModes.cs" />
+    <Compile Include="BCrypt+DSAFIPSVERSION_ENUM.cs" />
     <Compile Include="BCrypt+EccKeyBlob.cs" />
     <Compile Include="BCrypt+EccKeyBlobMagicNumbers.cs" />
+    <Compile Include="BCrypt+HASHALGORITHM_ENUM.cs" />
     <Compile Include="BCrypt+KeyDerivationFunctions.cs" />
     <Compile Include="BCrypt+PaddingSchemes.cs" />
     <Compile Include="BCrypt+PropertyNames.cs" />
