Fix build break due to missing dependencies
This break occurs on VS2015 Update 1 RTW. It didn't happen before then.

Fix #98

--- a/src/AdvApi32.Desktop/project.json
+++ b/src/AdvApi32.Desktop/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "supports": { },
   "dependencies": {
+    "NuProj.Common": "0.10.10-beta-g13363167e1"
   },
   "frameworks": {
     ".NETFramework,Version=v4.0": { }
