--- a/src/Windows.Core/project.json
+++ b/src/Windows.Core/project.json
@@ -10,7 +10,7 @@
       "version": "0.10.10-beta-g13363167e1",
       "suppressParent": "none"
     },
-    "StyleCop.Analyzers": "1.0.0-beta016"
+    "StyleCop.Analyzers": "1.0.0-rc2"
   },
   "frameworks": {
     ".NETPortable,Version=v4.0,Profile=Profile92": { }
