--- a/src/nuget.config
+++ b/src/nuget.config
@@ -5,6 +5,6 @@
   </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="myget.org/F/aarnott" value="https://www.myget.org/F/aarnott/api/v2" />
+    <add key="myget.org/F/aarnott" value="https://www.myget.org/F/aarnott/api/v3/index.json" />
   </packageSources>
 </configuration>
