--- a/src/Windows.Core/project.json
+++ b/src/Windows.Core/project.json
@@ -5,9 +5,9 @@
       "version": "1.1.61-rc",
       "suppressParent": "none"
     },
-    "Nuproj": "0.10.10-beta-g13363167e1",
+    "Nuproj": "0.10.27-beta-g2363d7cd98",
     "Nuproj.Common": {
-      "version": "0.10.10-beta-g13363167e1",
+      "version": "0.10.27-beta-g2363d7cd98",
       "suppressParent": "none"
     },
     "StyleCop.Analyzers": "1.0.0-rc2"
