--- a/src/BCrypt/project.json
+++ b/src/BCrypt/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "supports": {},
   "dependencies": {
+    "StyleCop.Analyzers": "1.0.0-rc2"
   },
   "frameworks": {
     ".NETPortable,Version=v4.0,Profile=Profile92": {}
