Add project reference so debugging builds the code generator

--- a/src/CodeGeneration.Debugging/CodeGeneration.Debugging.csproj
+++ b/src/CodeGeneration.Debugging/CodeGeneration.Debugging.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CodeGeneration\CodeGeneration.csproj">
+      <Project>{c1815471-02af-4bb9-8d83-652adbaff5b6}</Project>
+      <Name>CodeGeneration</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
