--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Kernel32+ProcessAccess.cs" />
     <Compile Include="Kernel32+PROCESSENTRY32.cs" />
     <Compile Include="Kernel32+PROCESS_INFORMATION.cs" />
+    <Compile Include="Kernel32+PROC_THREAD_ATTRIBUTE_LIST.cs" />
     <Compile Include="Kernel32+QueryFullProcessImageNameFlags.cs" />
     <Compile Include="Kernel32+SafeLibraryHandle.cs" />
     <Compile Include="Kernel32+SECURITY_IMPERSONATION_LEVEL.cs" />
@@ -49,12 +50,23 @@
     <Compile Include="Kernel32+StartupInfoFlags.cs" />
     <Compile Include="Kernel32+STARTUPINFOEX.cs" />
     <Compile Include="Kernel32+STARTUPINFO.cs" />
-    <Compile Include="Kernel32.cs" />
+    <Compile Include="Kernel32.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="Kernel32.Helpers.cs" />
     <Compile Include="Kernel32+NullablePipeMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CodeGenerationAttributes.Net40\CodeGenerationAttributes.Net40.csproj">
+      <Project>{6a77281b-c503-44ea-90c1-0e9868d06cd0}</Project>
+      <Name>CodeGenerationAttributes.Net40</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CodeGeneration\CodeGeneration.csproj">
+      <Project>{C1815471-02AF-4BB9-8D83-652ADBAFF5B6}</Project>
+      <Name>CodeGeneration</Name>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
       <Project>{b08c3c79-4cdd-4d37-933c-07d3452fd5f1}</Project>
       <Name>Windows.Core</Name>
