Add code generator for IntPtr property accessors
Provides the infrastructural support for #130

--- a/src/CodeGeneration/CodeGeneration.csproj
+++ b/src/CodeGeneration/CodeGeneration.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OfferIntPtrOverloadGenerator.cs" />
+    <Compile Include="OfferIntPtrPropertyAccessorsGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="project.json" />
