--- a/src/CodeGeneration/project.json
+++ b/src/CodeGeneration/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "dependencies": {
     "CodeGeneration.Roslyn": {
-      "version": "0.1.43-alpha",
+      "version": "0.1.48-alpha-gaa3f482974",
       "suppressParent": "none"
     },
     "Nerdbank.GitVersioning": {
