--- a/src/CodeGenerationAttributes.Net40/CodeGenerationAttributes.Net40.csproj
+++ b/src/CodeGenerationAttributes.Net40/CodeGenerationAttributes.Net40.csproj
@@ -34,6 +34,9 @@
     <Compile Include="..\CodeGenerationAttributes\OfferIntPtrOverloadsAttribute.cs">
       <Link>OfferIntPtrOverloadsAttribute.cs</Link>
     </Compile>
+    <Compile Include="..\CodeGenerationAttributes\OfferIntPtrPropertyAccessorsAttribute.cs">
+      <Link>OfferIntPtrPropertyAccessorsAttribute.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))\EnlistmentInfo.targets" Condition=" '$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))' != '' " />
