Fix IMAGE_OPTIONAL_HEADER inlining of array

--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -30,6 +30,7 @@
     <Compile Include="IMAGE_FILE_HEADER.cs" />
     <Compile Include="IMAGE_NT_HEADERS.cs" />
     <Compile Include="IMAGE_OPTIONAL_HEADER.cs" />
+    <Compile Include="IMAGE_OPTIONAL_HEADER_DIRECTORIES.cs" />
     <Compile Include="IMAGE_SECTION_HEADER.cs" />
     <Compile Include="LIST_ENTRY.cs" />
     <Compile Include="NullableUInt32.cs" />
