Update versioning package
And configure it to build master branch without commit ID in versoin by default.

--- a/src/CodeGeneration/project.json
+++ b/src/CodeGeneration/project.json
@@ -5,7 +5,7 @@
       "suppressParent": "none"
     },
     "Nerdbank.GitVersioning": {
-      "version": "1.1.61-rc",
+      "version": "1.2.1",
       "suppressParent": "none"
     },
     "Nuproj.Common": {
