Add more docs and enum type

--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -36,6 +36,7 @@
     <Compile Include="IMAGE_OPTIONAL_HEADER_DIRECTORIES.cs" />
     <Compile Include="IMAGE_OPTIONAL_HEADER+MagicType.cs" />
     <Compile Include="IMAGE_OPTIONAL_HEADER+SubsystemType.cs" />
+    <Compile Include="IMAGE_SECTION_HEADER+CharacteristicsType.cs" />
     <Compile Include="IMAGE_SECTION_HEADER.cs" />
     <Compile Include="LIST_ENTRY.cs" />
     <Compile Include="NullableUInt32.cs" />
