Add the BCRYPT_PSS_PADDING_INFO struct

--- a/src/BCrypt/BCrypt.csproj
+++ b/src/BCrypt/BCrypt.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
     <Compile Include="BCrypt+BCRYPT_PKCS1_PADDING_INFO.cs" />
+    <Compile Include="BCrypt+BCRYPT_PSS_PADDING_INFO.cs" />
     <Compile Include="BCrypt+BCRYPT_RSAKEY_BLOB.cs" />
     <Compile Include="BCrypt+BCRYPT_DH_KEY_BLOB.cs" />
     <Compile Include="BCrypt+BufferType.cs" />
