Add HResult struct and tests
#144

--- a/src/Windows.Core.Tests/Windows.Core.Tests.csproj
+++ b/src/Windows.Core.Tests/Windows.Core.Tests.csproj
@@ -27,6 +27,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HResultTests.cs" />
     <Compile Include="NullableGuidTests.cs" />
     <Compile Include="NullableUInt32Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
