Add LsaNtStatusToWinError to AdvApi32
#144

--- a/src/AdvApi32.Tests/AdvApi32.Tests.csproj
+++ b/src/AdvApi32.Tests/AdvApi32.Tests.csproj
@@ -12,7 +12,8 @@
     <ProjectGuid>{C7809FEC-FF01-4602-9CDD-E78832E35D67}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <AssemblyName>PInvoke.AdvApi32.Tests</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
@@ -37,6 +38,10 @@
     <ProjectReference Include="..\AdvApi32.Desktop\AdvApi32.Desktop.csproj">
       <Project>{9FDFEB7D-0CE6-4946-ADED-3678A9336F3C}</Project>
       <Name>AdvApi32.Desktop</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
+      <Project>{B08C3C79-4CDD-4D37-933C-07D3452FD5F1}</Project>
+      <Name>Windows.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
