Add code generation metadata to NTDll.Desktop and template

--- a/src/NTDll.Desktop/NTDll.Desktop.csproj
+++ b/src/NTDll.Desktop/NTDll.Desktop.csproj
@@ -43,7 +43,9 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NTDll.cs" />
+    <Compile Include="NTDll.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
