--- a/templates/LIBNAME.Desktop/LIBNAME.Desktop.csproj
+++ b/templates/LIBNAME.Desktop/LIBNAME.Desktop.csproj
@@ -43,7 +43,9 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LIBNAME.cs" />
+    <Compile Include="LIBNAME.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
