--- a/templates/LIBNAME.Tests/LIBNAME.Tests.csproj
+++ b/templates/LIBNAME.Tests/LIBNAME.Tests.csproj
@@ -12,7 +12,8 @@
     <ProjectGuid>$guid3$</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <AssemblyName>PInvoke.LIBNAME.Tests</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
