Add Win32ErrorCode->HResult conversion function
Also remove others that are either incomplete or not reflective of actual macros defined in Windows header files.

--- a/src/Windows.Core.Tests/Windows.Core.Tests.csproj
+++ b/src/Windows.Core.Tests/Windows.Core.Tests.csproj
@@ -30,6 +30,7 @@
     <Compile Include="HResultTests.cs" />
     <Compile Include="NullableGuidTests.cs" />
     <Compile Include="NullableUInt32Tests.cs" />
+    <Compile Include="PInvokeExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
