--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -26,6 +26,8 @@
   <ItemGroup>
     <Compile Include="ApiSets.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="HResult+FacilityCodes.cs" />
+    <Compile Include="HResult+SeverityCodes.cs" />
     <Compile Include="HResult.cs" />
     <Compile Include="IMAGE_DATA_DIRECTORY.cs" />
     <Compile Include="IMAGE_FILE_HEADER+CharacteristicsType.cs" />
