--- a/src/Windows.Core.Tests/Windows.Core.Tests.csproj
+++ b/src/Windows.Core.Tests/Windows.Core.Tests.csproj
@@ -27,6 +27,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NTStatusTests.cs" />
     <Compile Include="HResultTests.cs" />
     <Compile Include="NullableGuidTests.cs" />
     <Compile Include="NullableUInt32Tests.cs" />
