Throw NTStatusException instead of COMException

--- a/src/Kernel32.Tests/Kernel32.Tests.csproj
+++ b/src/Kernel32.Tests/Kernel32.Tests.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Compile Include="Kernel32.cs" />
     <Compile Include="IgnoreOnOsVersionUnderFactAttribute.cs" />
+    <Compile Include="Kernel32ExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
