Bring back an enum for NTStatus
This is the only way to get the debugger to show the value's name in the data tip.

--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -43,7 +43,7 @@
     <Compile Include="IMAGE_SECTION_HEADER+CharacteristicsType.cs" />
     <Compile Include="IMAGE_SECTION_HEADER.cs" />
     <Compile Include="LIST_ENTRY.cs" />
-    <Compile Include="NTStatus+CommonCodes.cs" />
+    <Compile Include="NTStatus+Code.cs" />
     <Compile Include="NTStatus+SeverityCodes.cs" />
     <Compile Include="NTStatus+FacilityCodes.cs" />
     <Compile Include="NullableUInt32.cs" />
