--- a/src/NCrypt.Tests/NCrypt.Tests.csproj
+++ b/src/NCrypt.Tests/NCrypt.Tests.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NCrypt.cs" />
+    <Compile Include="NCryptExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
